// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ListPublicSSO /> renders all element with France Connect 1`] = `
<Fragment>
  <ListGroup
    className=""
  >
    <ListPublicSSO__ListGroupItemWithJustifyContentStart>
      <Toggle
        id="toggle-franceConnect"
        label={
          <h5
            className="mb-0 mt-0"
          >
            <FormattedMessage
              id="capco.module.login_franceconnect"
              values={Object {}}
            />
          </h5>
        }
        onChange={[Function]}
      />
      <Relay(Connect(ReduxForm))
        onClose={[Function]}
        show={false}
      />
    </ListPublicSSO__ListGroupItemWithJustifyContentStart>
    <ListPublicSSO__ListGroupItemWithJustifyContentStart>
      <Toggle
        checked={true}
        disabled={true}
        id="toggle-email"
        label={
          <h5
            className="mb-0 mt-0"
          >
            <FormattedMessage
              id="global.email"
              values={Object {}}
            />
          </h5>
        }
      />
    </ListPublicSSO__ListGroupItemWithJustifyContentStart>
  </ListGroup>
</Fragment>
`;

exports[`<ListPublicSSO /> renders correctly without France Connect 1`] = `
<Fragment>
  <ListGroup
    className=""
  >
    <ListPublicSSO__ListGroupItemWithJustifyContentStart>
      <Toggle
        checked={false}
        id="toggle-franceConnect"
        label={
          <h5
            className="mb-0 mt-0"
          >
            <FormattedMessage
              id="capco.module.login_franceconnect"
              values={Object {}}
            />
          </h5>
        }
        onChange={[Function]}
      />
      <AppBox
        marginLeft="auto"
      >
        <FranceConnectTeaserModal />
      </AppBox>
      <Relay(Connect(ReduxForm))
        onClose={[Function]}
        show={false}
      />
    </ListPublicSSO__ListGroupItemWithJustifyContentStart>
    <ListPublicSSO__ListGroupItemWithJustifyContentStart>
      <Toggle
        checked={true}
        disabled={true}
        id="toggle-email"
        label={
          <h5
            className="mb-0 mt-0"
          >
            <FormattedMessage
              id="global.email"
              values={Object {}}
            />
          </h5>
        }
      />
    </ListPublicSSO__ListGroupItemWithJustifyContentStart>
  </ListGroup>
</Fragment>
`;
